app/assets/stylesheets/custom.css
.card {
  padding: 15px;
  background-color: white;
  border: 1px solid #D3D3D3 !important;
  box-shadow: none !important;
  font-family: 'Lato', sans-serif;
}

.event-card:hover {
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  position: relative;
}

.card-custom{
  margin-top: 50px;
}

.card-owner-list {
  margin-left: 20px;
  margin-top: 135px;
  width: 400px;
  height: 60% !important;
}

.card-durag {
  font-size: 20px;
}

#shabba {
  height: 70vw;
}

h4 {
  display: inline-block;
  font-size: 25px;
}

h5 {
  display: inline-block;
}

.card-text {
  color: #37474F;
}

p {
  padding-top: 8px;
  padding-left: 8px;
}

body {
  background-color: #F1F1F1;
}

.bod {

}

html {
  position: relative;
  min-height: 100%;
}

.container {
  //padding-bottom: 250px;
}

.navbar-fixed-bottom {
  position: absolute;
  padding-bottom: 50px;
}

.title {
  color: white;
}

.custom {
  color: white;
  font-size: 30px;
  text-align: center;
  font-family: 'Lobster', cursive;
}

textarea {
  resize: none;
 }

.pull-left {
   padding-left: 20px;
 }

.event-days {
  min-height: 30px;
  border-radius: 20px;
  background-color: lightblue;
  color: white;
  text-align: center;
  font-size: 25px;
  padding: 0 20 0 20px;
  margin-left: 10px;
}

.div-today {
  background-color: purple;
}

.div-tom {
  background-color: pink;
}

.dropdown-toggle {
  border: none;
}

.dropdown-toggle[aria-expanded="true"] {
  background:#F1F1F1;
}

.dropdown-toggle[aria-expanded="false"] {
  background:#F1F1F1;
}

.dropdown-item {
  font-size: 30px;
  margin: 15px;
}

.short-hd {
  margin-top: -5px;
}

.pretty-font {
  font-family: 'Lobster', cursive;
}

.navbar-brand {
  position: absolute;
  margin-top: -15px;
}

.navbar {
  min-height: 100px;
  border-bottom: 0;
  //background-color: transparent !important;
  box-shadow: none !important;
}

#mast-head {
  height: 100px;
  clear: both;
}

#mast-logo {
}

#content {
  margin-bottom: 60px;
}

.no-top-bord {
  border-top: none !important;
}

a {
  color: #3f3f3f !important;
  text-decoration: none;
 }

 .time-icon {
   margin-right: 6px;
   margin-bottom: 2px;
   vertical-align: bottom;
 }


.own-back-lnk {
  margin-right: 6px;
}

.no-wrap {
  white-space: nowrap;
}

.small-fix-box {
  margin-top: 40px;
}

.event-form-text {
  font-size: 18px;
  font-weight: normal;
}

.event-opt {
  height: 20px;
}

.event-form-lb {
  padding-right: 20px;
}

.time-lb {
  width: 60px;
}

.main-logo {
  transform: scale(.8);
}

.mast-text {
  font-size: 20px;
  margin-right: 30px;
  font-family: 'Lato', sans-serif;
}

.mast-text:hover, .mast-text:active {
  color: #f15d5c !important;
}


.mast-text:hover {
  background-color: none;
}

.nav>li>a:focus, .nav>li>a:hover {
  background-color: transparent !important;
}

.nav-links {
  text-align: right;
}

#mast-links {
  padding-top: 20px;
}

.ham-tog {
  padding: 30px;
}

.navbar-toggle {
  padding: 26px;
}

// custom navbar

body {
	padding-top:70px;
}

.navbar-header {
  float: none;
}
.navbar-toggle {
  display: block;
}
.navbar-collapse.collapse {
  display: none!important;
}
.navbar-nav {
  float: none!important;
}
.navbar-nav>li {
  float: none;
}
.navbar-collapse.collapse.in{
  display:block !important;
}

.text-center {
  text-align: center;
}

.btn-center {
  margin: auto;
}

